--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             background-color: green;
             border: none;
             padding: 0 10px;
+            color: white;
         }
         input[type="text"]::placeholder{
             padding: 10px;
